--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* add . / commit / push */
+/* git-log : hiển thị lịch sử commit */
+/* git pull: kéo code mới nhất về */
